// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transaction register HTTP parity > pages the register with the floating tie-break and the starting balance below the page 1`] = `
{
  "startingBalance": 190700,
  "totalCount": 10,
  "transactions": [
    {
      "bookId": 1,
      "checkNumber": null,
      "createdAt": "<timestamp>",
      "createdBy": null,
      "date": "2030-01-01",
      "description": "Future",
      "id": 10,
      "investmentSplits": [],
      "isFloating": false,
      "isReconciled": false,
      "notes": null,
      "payee": null,
      "payeeId": null,
      "recurringRuleId": null,
      "splits": [
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 1,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Checking",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 1,
          "amount": -900,
          "bookId": 1,
          "id": 19,
          "transactionId": 10,
        },
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 3,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Groceries",
            "parentId": null,
            "subtype": null,
            "type": "expense",
            "updatedAt": "<timestamp>",
          },
          "accountId": 3,
          "amount": 900,
          "bookId": 1,
          "id": 20,
          "transactionId": 10,
        },
      ],
      "updatedAt": "<timestamp>",
      "updatedBy": null,
    },
    {
      "bookId": 1,
      "checkNumber": null,
      "createdAt": "<timestamp>",
      "createdBy": null,
      "date": "2024-12-01",
      "description": "Floating check",
      "id": 8,
      "investmentSplits": [],
      "isFloating": true,
      "isReconciled": false,
      "notes": null,
      "payee": null,
      "payeeId": null,
      "recurringRuleId": null,
      "splits": [
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 1,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Checking",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 1,
          "amount": -700,
          "bookId": 1,
          "id": 15,
          "transactionId": 8,
        },
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 3,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Groceries",
            "parentId": null,
            "subtype": null,
            "type": "expense",
            "updatedAt": "<timestamp>",
          },
          "accountId": 3,
          "amount": 700,
          "bookId": 1,
          "id": 16,
          "transactionId": 8,
        },
      ],
      "updatedAt": "<timestamp>",
      "updatedBy": null,
    },
    {
      "bookId": 1,
      "checkNumber": null,
      "createdAt": "<timestamp>",
      "createdBy": null,
      "date": "<today>",
      "description": "Today settled",
      "id": 9,
      "investmentSplits": [],
      "isFloating": false,
      "isReconciled": false,
      "notes": null,
      "payee": null,
      "payeeId": null,
      "recurringRuleId": null,
      "splits": [
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 1,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Checking",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 1,
          "amount": -300,
          "bookId": 1,
          "id": 17,
          "transactionId": 9,
        },
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 3,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Groceries",
            "parentId": null,
            "subtype": null,
            "type": "expense",
            "updatedAt": "<timestamp>",
          },
          "accountId": 3,
          "amount": 300,
          "bookId": 1,
          "id": 18,
          "transactionId": 9,
        },
      ],
      "updatedAt": "<timestamp>",
      "updatedBy": null,
    },
  ],
}
`;

exports[`transaction register HTTP parity > pages the register with the floating tie-break and the starting balance below the page 2`] = `
{
  "startingBalance": 95900,
  "totalCount": 10,
  "transactions": [
    {
      "bookId": 1,
      "checkNumber": null,
      "createdAt": "<timestamp>",
      "createdBy": null,
      "date": "2025-02-15",
      "description": "Pay February",
      "id": 7,
      "investmentSplits": [],
      "isFloating": false,
      "isReconciled": false,
      "notes": null,
      "payee": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "id": 2,
        "name": "Employer",
      },
      "payeeId": 2,
      "recurringRuleId": 1,
      "splits": [
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 1,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Checking",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 1,
          "amount": 100000,
          "bookId": 1,
          "id": 13,
          "transactionId": 7,
        },
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 4,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Salary",
            "parentId": null,
            "subtype": null,
            "type": "income",
            "updatedAt": "<timestamp>",
          },
          "accountId": 4,
          "amount": -100000,
          "bookId": 1,
          "id": 14,
          "transactionId": 7,
        },
      ],
      "updatedAt": "<timestamp>",
      "updatedBy": null,
    },
    {
      "bookId": 1,
      "checkNumber": null,
      "createdAt": "<timestamp>",
      "createdBy": null,
      "date": "2025-02-12",
      "description": "Transfer",
      "id": 6,
      "investmentSplits": [],
      "isFloating": false,
      "isReconciled": false,
      "notes": null,
      "payee": null,
      "payeeId": null,
      "recurringRuleId": null,
      "splits": [
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 1,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Checking",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 1,
          "amount": -5000,
          "bookId": 1,
          "id": 11,
          "transactionId": 6,
        },
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 2,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Savings",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 2,
          "amount": 5000,
          "bookId": 1,
          "id": 12,
          "transactionId": 6,
        },
      ],
      "updatedAt": "<timestamp>",
      "updatedBy": null,
    },
    {
      "bookId": 1,
      "checkNumber": null,
      "createdAt": "<timestamp>",
      "createdBy": null,
      "date": "2025-02-10",
      "description": "Tie high",
      "id": 5,
      "investmentSplits": [],
      "isFloating": false,
      "isReconciled": true,
      "notes": null,
      "payee": null,
      "payeeId": null,
      "recurringRuleId": null,
      "splits": [
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 1,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Checking",
            "parentId": null,
            "subtype": "bank",
            "type": "asset",
            "updatedAt": "<timestamp>",
          },
          "accountId": 1,
          "amount": -200,
          "bookId": 1,
          "id": 9,
          "transactionId": 5,
        },
        {
          "account": {
            "bookId": 1,
            "createdAt": "<timestamp>",
            "icon": null,
            "id": 3,
            "isActive": true,
            "isFavorite": false,
            "isInvestmentCash": false,
            "name": "Groceries",
            "parentId": null,
            "subtype": null,
            "type": "expense",
            "updatedAt": "<timestamp>",
          },
          "accountId": 3,
          "amount": 200,
          "bookId": 1,
          "id": 10,
          "transactionId": 5,
        },
      ],
      "updatedAt": "<timestamp>",
      "updatedBy": null,
    },
  ],
}
`;

exports[`transaction register HTTP parity > returns investment splits with their security and account 1`] = `
[
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2025-03-02",
    "description": "Split",
    "id": 12,
    "investmentSplits": [
      {
        "account": null,
        "accountId": null,
        "action": "split",
        "bookId": 1,
        "feesCents": 0,
        "id": 2,
        "priceMicros": 0,
        "security": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "fetchPrices": true,
          "fixedPriceMicros": 5000000,
          "id": 1,
          "name": "Total Market",
          "securityType": "etf",
          "symbol": "VTI",
        },
        "securityId": 1,
        "sharesMicros": 0,
        "splitDenominator": 1,
        "splitNumerator": 2,
        "transactionId": 12,
      },
    ],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 6,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 6,
        "amount": 0,
        "bookId": 1,
        "id": 23,
        "transactionId": 12,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 6,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 6,
        "amount": 0,
        "bookId": 1,
        "id": 24,
        "transactionId": 12,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2025-03-01",
    "description": "Buy",
    "id": 11,
    "investmentSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 6,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 6,
        "action": "buy",
        "bookId": 1,
        "feesCents": 3,
        "id": 1,
        "priceMicros": 50000000,
        "security": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "fetchPrices": true,
          "fixedPriceMicros": 5000000,
          "id": 1,
          "name": "Total Market",
          "securityType": "etf",
          "symbol": "VTI",
        },
        "securityId": 1,
        "sharesMicros": 2000000,
        "splitDenominator": null,
        "splitNumerator": null,
        "transactionId": 11,
      },
    ],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 6,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 6,
        "amount": 10000,
        "bookId": 1,
        "id": 21,
        "transactionId": 11,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -10000,
        "bookId": 1,
        "id": 22,
        "transactionId": 11,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
]
`;

exports[`transaction register HTTP parity > widens the page to reach ensureId, and keeps the limit sentinels 1`] = `
[
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2030-01-01",
    "description": "Future",
    "id": 10,
    "investmentSplits": [],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -900,
        "bookId": 1,
        "id": 19,
        "transactionId": 10,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 3,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Groceries",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 3,
        "amount": 900,
        "bookId": 1,
        "id": 20,
        "transactionId": 10,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
  {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": null,
    "date": "2024-12-01",
    "description": "Floating check",
    "id": 8,
    "investmentSplits": [],
    "isFloating": true,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -700,
        "bookId": 1,
        "id": 15,
        "transactionId": 8,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 3,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Groceries",
          "parentId": null,
          "subtype": null,
          "type": "expense",
          "updatedAt": "<timestamp>",
        },
        "accountId": 3,
        "amount": 700,
        "bookId": 1,
        "id": 16,
        "transactionId": 8,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": null,
  },
]
`;
